--- a/mine.html
+++ b/mine.html
@@ -34,7 +34,7 @@
 					    	Decred (DCR)
 					    </td>
 					    <td id="decred-amount-pedro">
-					    	1509.24723
+					    	1505.38169
 					    </td>
 					    <td id="decred-total-pedro" class="Pbtcvalue">
 					    </td>
@@ -175,7 +175,7 @@
 						    	Decred (DCR)
 						    </td>
 						    <td id="decred-amount-carlos">
-						    	273.810984
+						    	277.676519
 						    </td>
 						    <td id="decred-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -199,7 +199,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	6.40297762
+						    	5.77709731
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -211,7 +211,7 @@
 						    	IOTA (MIOTA)
 						    </td>
 						    <td id="iota-amount-carlos">
-						    	17284.8166
+						    	17395.6216
 						    </td>
 						    <td id="iota-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -422,6 +422,30 @@
 						    <td id="mywish-real-carlos">
 						    </td>
 						  </tr>
+							<tr>
+						    <td>
+						    	Creativecoin (CREA)
+						    </td>
+						    <td id="creativecoin-amount-carlos">
+						    	3470.40182675
+						    </td>
+						    <td id="creativecoin-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="creativecoin-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Nebulas (NAS)
+						    </td>
+						    <td id="nebulas-token-amount-carlos">
+						    	303.44197089
+						    </td>
+						    <td id="nebulas-token-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="nebulas-token-real-carlos">
+						    </td>
+						  </tr>
 						  <tr>
 						    <td>
 						    	<strong>TOTAL</strong>
@@ -486,7 +510,7 @@
 					    	Bitcoin (BTC)
 					    </td>
 					    <td id="bitcoin-amount-mariana" class="Mbtcvalue">
-					    	0.634059287
+					    	0.50000000
 					    </td>
 					    <td id="bitcoin-total-mariana">
 					    </td>
@@ -498,7 +522,7 @@
 								IOTA (MIOTA)
 							</td>
 							<td id="iota-amount-mariana">
-								1039.82269
+								1661.85994
 							</td>
 							<td id="iota-total-mariana" class="Mbtcvalue">
 							</td>
@@ -835,6 +859,28 @@
 					    <td id="mywish-change-btc">
 					    </td>
 					    <td id="mywish-change-real">
+					    </td>
+					  </tr>
+						<tr>
+					    <td>
+					    	Creativecoin (CREA)
+					    </td>
+					    <td id="creativecoin-price">
+					    </td>
+					    <td id="creativecoin-change-btc">
+					    </td>
+					    <td id="creativecoin-change-real">
+					    </td>
+					  </tr>
+						<tr>
+					    <td>
+					    	Nebulas (NAS)
+					    </td>
+					    <td id="nebulas-token-price">
+					    </td>
+					    <td id="nebulas-token-change-btc">
+					    </td>
+					    <td id="nebulas-token-change-real">
 					    </td>
 					  </tr>
 					</tbody>
