--- a/mine.html
+++ b/mine.html
@@ -175,7 +175,7 @@
 						    	Decred (DCR)
 						    </td>
 						    <td id="decred-amount-carlos">
-						    	277.676519
+						    	271.955204
 						    </td>
 						    <td id="decred-total-carlos" class="Cbtcvalue">
 						    </td>
@@ -199,7 +199,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	5.77709731
+						    	5.62960218
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -367,7 +367,7 @@
 									0x (ZRX)
 								</td>
 								<td id="0x-amount-carlos">
-									1057.30598435
+									2212.88133296
 								</td>
 								<td id="0x-total-carlos" class="Cbtcvalue">
 								</td>
@@ -444,6 +444,18 @@
 						    <td id="nebulas-token-total-carlos" class="Cbtcvalue">
 						    </td>
 						    <td id="nebulas-token-real-carlos">
+						    </td>
+						  </tr>
+							<tr>
+						    <td>
+						    	Cardano (ADA)
+						    </td>
+						    <td id="cardano-amount-carlos">
+						    	4639.77848
+						    </td>
+						    <td id="cardano-total-carlos" class="Cbtcvalue">
+						    </td>
+						    <td id="cardano-real-carlos">
 						    </td>
 						  </tr>
 						  <tr>
@@ -881,6 +893,17 @@
 					    <td id="nebulas-token-change-btc">
 					    </td>
 					    <td id="nebulas-token-change-real">
+					    </td>
+					  </tr>
+						<tr>
+					    <td>
+					    	Cardano (ADA)
+					    </td>
+					    <td id="cardano-price">
+					    </td>
+					    <td id="cardano-change-btc">
+					    </td>
+					    <td id="cardano-change-real">
 					    </td>
 					  </tr>
 					</tbody>
