--- a/mine.html
+++ b/mine.html
@@ -58,7 +58,7 @@
 					    	Bitcoin (BTC)
 					    </td>
 					    <td id="bitcoin-amount-pedro" class="Pbtcvalue">
-					    	2.97532626
+					    	2.82530083
 					    </td>
 					    <td id="bitcoin-total-pedro">
 					    </td>
@@ -111,6 +111,18 @@
 					    <td id="status-total-pedro" class="Pbtcvalue">
 					    </td>
 					    <td id="status-real-pedro">
+					    </td>
+					  </tr>
+						<tr>
+					    <td>
+					    	Cardano (ADA)
+					    </td>
+					    <td id="cardano-amount-pedro">
+					    	4082.98313595
+					    </td>
+					    <td id="cardano-total-pedro" class="Pbtcvalue">
+					    </td>
+					    <td id="cardano-real-pedro">
 					    </td>
 					  </tr>
 						<tr>
@@ -199,7 +211,7 @@
 						    	Bitcoin (BTC)
 						    </td>
 						    <td id="bitcoin-amount-carlos" class="Cbtcvalue">
-						    	5.62960218
+						    	5.42960218
 						    </td>
 						    <td id="bitcoin-total-carlos">
 						    </td>
@@ -451,7 +463,7 @@
 						    	Cardano (ADA)
 						    </td>
 						    <td id="cardano-amount-carlos">
-						    	4639.77848
+						    	10117.538
 						    </td>
 						    <td id="cardano-total-carlos" class="Cbtcvalue">
 						    </td>
