--- a/geoo.html
+++ b/geoo.html
@@ -6,11 +6,38 @@
   </head>
   <script src='js/jquery-3.1.1.min.js'></script>
   <script src="js/geoo.js"></script>
+  <link rel="stylesheet" href="css/geoo.css">
   <body>
-    <center style="padding-top: 25px;">
-      <h1>Rio de Janeiro</h1>
-      <h3><span id="tempo" ></span></h3>
-      <h3><span id="temperatura" ></span>°C</h3>
-    </center>
+
+    <div id="RJ">
+      <center style="padding-top: 4%;">
+        <div id="boxRJ"></div>
+        <h1>Rio de Janeiro</h1>
+        <h3><span id="tempoRJ" ></span></h3>
+        <h3><span id="temperaturaRJ" ></span>°C</h3>
+        <span id="spotRJ"></span>
+      </center>
+    </div>
+
+    <div id="NY">
+      <center style="padding-top: 4%;">
+        <div id="boxNY"></div>
+        <h1>New York</h1>
+        <h3><span id="tempoNY" ></span></h3>
+        <h3><span id="temperaturaNY" ></span>°C</h3>
+        <span id="spotNY"></span>
+      </center>
+    </div>
+
+    <div id="SA">
+      <center style="padding-top: 4%;">
+        <div id="boxSA"></div>
+        <h1>Deserto do Saara</h1>
+        <h3><span id="tempoSA" ></span></h3>
+        <h3><span id="temperaturaSA" ></span>°C</h3>
+        <span id="spotSA"></span>
+      </center>
+    </div>
+
   </body>
 </html>
