--- a/ej.html
+++ b/ej.html
@@ -24,8 +24,10 @@
       </center>
     </div>
     <div style="display: none;" id="els">
-      <center>
-        text
+      <center style="padding-top:10vw;">
+        <h2>VOCÊ ACERTOU A PRIMEIRA PARTE DO ENIGMA</h2>
+        <h4>pegue o envelope escrito SEMI na baia do pandrade</h4>
+        <video src="https://media3.giphy.com/media/l2Sqc3POpzkj5r8SQ/giphy.mp4" autoplay="" loop="" playsinline="" style="width: 480px; height: 201px; left: 0px; top: 0px;"></video>
       </center>
     </div>
     <div id="image30" style="display: none;">
@@ -54,7 +56,7 @@
   </script>
   <style>
     *{
-      background-color: #c3d0e5;
+      background-color: #eae1c9;
     }
   </style>
 </html>
