--- a/ej.html
+++ b/ej.html
@@ -31,13 +31,13 @@
       </center>
     </div>
     <div id="image30" style="display: none;">
-    <center><img style="padding-top: 7vw;"src="b7d.png"/></center>
+    <center><img style="padding-top: 7vw;" src="vire-o-celular.png"/></center>
     </div>
   </body>
   <script>
     function calc(){
       var dist = distance.value;
-      if (dist == 'semi'){
+      if (dist == 'pablito' || dist == 'Pablito' || dist == 'PABLITO'){
         document.getElementById('ifs').style.display = 'none';
         document.getElementById('els').style.display = '';
     }
