--- a/ej.html
+++ b/ej.html
@@ -14,7 +14,7 @@
     </div>
     <div style="width: 100%; height: 0%; display: none;" id="ifs">
       <center><h1 style="font-size:60px;">QUAL A SENHA?</h1><br />
-        <h4>EM LETRAS MAIÚSCULAS E TUDO JUNTO</h4>
+        <h4>não tenha medo</h4>
       <input id="distance">
       <input type="button" onclick="calc()" value="CONFIRMAR">
       <p id="msg"></p>
