--- a/ej.html
+++ b/ej.html
@@ -7,9 +7,19 @@
   </head>
   <body>
     <div id="gif30">
-      <center><h1 style="font-size:60px;">SELECIONE UM DOS GIF's</h1><br />
-        <video onclick="transform()" src="https://media.giphy.com/media/MwOuiiTfWfWgM/giphy.mp4" autoplay="" loop="" playsinline="" style="width: 480px; height: 486.417px; left: 0px; top: 0px;"></video>
-        <video onclick="retransform()" src="https://media0.giphy.com/media/3o7TKUM3IgJBX2as9O/giphy.mp4" autoplay="" loop="" playsinline="" style="width: 480px; height: 359.551px; left: 0px; top: 0px; padding-left: 10px;"></video>
+      <center>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
+        <img onclick="transform()" src="x.png" />
+        <img onclick="transform()" src="x.png" />
+        <img onclick="transform()" src="x.png" />
+        <img onclick="retransform()" src="v.png" />
       </center>
     </div>
     <div style="width: 100%; height: 0%; display: none;" id="ifs">
@@ -27,7 +37,7 @@
       <center style="padding-top:10vw;">
         <h2>VOCÊ ACERTOU A PRIMEIRA PARTE DO ENIGMA</h2>
         <h4>pegue o envelope escrito SEMI na baia do pandrade</h4>
-        <video src="https://media3.giphy.com/media/l2Sqc3POpzkj5r8SQ/giphy.mp4" autoplay="" loop="" playsinline="" style="width: 480px; height: 201px; left: 0px; top: 0px;"></video>
+        <iframe src="https://giphy.com/embed/l2Sqc3POpzkj5r8SQ" width="480" height="201" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
       </center>
     </div>
     <div id="image30" style="display: none;">
