--- a/ej.html
+++ b/ej.html
@@ -16,9 +16,9 @@
         <br />
         <br />
         <br />
+        <a href="https://en.wikipedia.org/wiki/Linguistic_relativity"><img src="x.png" /></a>
         <img onclick="transform()" src="x.png" />
-        <img onclick="transform()" src="x.png" />
-        <img onclick="transform()" src="x.png" />
+        <a href="https://de.wikipedia.org/wiki/Der_Wanderer_über_dem_Nebelmeer"><img src="x.png" /></a>
         <img onclick="retransform()" src="v.png" />
       </center>
     </div>
