--- a/emp-code.html
+++ b/emp-code.html
@@ -1,10 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-br" dir="ltr">
+
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>STUD</title>
   </head>
+
+    <script src="js/emp.js"></script>
+    <link rel="stylesheet" href="css/emp.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <body>
+    <div class="topnav">
+      <a href="emp.html">Home</a>
+      <a href="#about">Quem Somos</a>
+      <a href="#contact">Contato</a>
+      <div class="search-container">
+        <form action="/action_page.php">
+          <input type="text" placeholder="Search.." name="search">
+          <button type="submit"><i class="fa fa-search"></i></button>
+        </form>
+      </div>
+    </div>
+
+    <div style="padding-left:16px">
+      <h2>Escolha um segmento</h2>
+    </div>
+
+    <a href="emp-code-js.html">
+      <div style="margin: 0 0 5vw 5vw; float: left;">
+        <div class="card">
+          <img src="js.png" alt="Avatar" style="width: 200px; height: 200px;">
+          <div class="container">
+            <center><h4><b>JAVASCRIPT</b></h4></center>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="#">
+      <div style="margin: 0 0 5vw 5vw; float: left;">
+        <div class="card">
+          <img src="cpp.png" alt="Avatar" style="width: 200px; height: 200px;">
+          <div class="container">
+            <center><h4><b>C++</b></h4></center>
+          </div>
+        </div>
+      </div>
+    </a>
+
+    <a href="#">
+      <div style="margin: 0 0 5vw 5vw; float: left;">
+        <div class="card">
+          <img src="python.png" alt="Avatar" style="width: 200px; height: 200px;">
+          <div class="container">
+            <center><h4><b>PYTHON</b></h4></center>
+          </div>
+        </div>
+      </div>
+    </a>
 
   </body>
 </html>
