--- a/emp-code.html
+++ b/emp-code.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="topnav">
-      <a style="padding: 8px; !important"><img src="stud_logo.png" align="middle" width="25vw" height="auto" style="padding: 0 !important"/></a>
+      <a class="logo_a" ><img src="stud_logo.png" align="middle" width="25vw" height="auto" style="padding: 0 !important"/></a>
       <a href="emp.html">Home</a>
       <a href="#about">Quem Somos</a>
       <a href="#contact">Contato</a>
