--- a/mine.html
+++ b/mine.html
@@ -436,14 +436,14 @@
 						  </tr>
 							<tr>
 						    <td>
-						    	Creativecoin (CREA)
+						    	CREA (CREA)
 						    </td>
-						    <td id="creativecoin-amount-carlos">
+						    <td id="crea-amount-carlos">
 						    	3470.40182675
 						    </td>
-						    <td id="creativecoin-total-carlos" class="Cbtcvalue">
+						    <td id="crea-total-carlos" class="Cbtcvalue">
 						    </td>
-						    <td id="creativecoin-real-carlos">
+						    <td id="crea-real-carlos">
 						    </td>
 						  </tr>
 							<tr>
@@ -887,13 +887,13 @@
 					  </tr>
 						<tr>
 					    <td>
-					    	Creativecoin (CREA)
+					    	CREA (CREA)
 					    </td>
-					    <td id="creativecoin-price">
+					    <td id="crea-price">
 					    </td>
-					    <td id="creativecoin-change-btc">
+					    <td id="crea-change-btc">
 					    </td>
-					    <td id="creativecoin-change-real">
+					    <td id="crea-change-real">
 					    </td>
 					  </tr>
 						<tr>
